--- a/src/GUI/Windows/StatsValidatorWindow.xaml
+++ b/src/GUI/Windows/StatsValidatorWindow.xaml
@@ -1,136 +1,137 @@
 ﻿<local:StatsValidatorWindowBase
-    x:Class="ModManager.Windows.StatsValidatorWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:adonisUI="clr-namespace:AdonisUI;assembly=AdonisUI"
-    xmlns:behavior="clr-namespace:ModManager.Controls.Behavior"
-    xmlns:controls="clr-namespace:ModManager.Controls"
-    xmlns:conv="clr-namespace:ModManager.Converters"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:dapp="clr-namespace:ModManager;assembly=ModManager.Core"
-    xmlns:data="clr-namespace:ModManager.Models.View;assembly=ModManager.Core"
-    xmlns:dd="urn:gong-wpf-dragdrop"
-    xmlns:local="clr-namespace:ModManager.Windows"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:reactiveui="http://reactiveui.net"
-    xmlns:views="clr-namespace:ModManager.Controls.Views"
-    xmlns:vm="clr-namespace:ModManager.ViewModels"
-    Title="Stats Validator"
-    Width="900"
-    Height="600"
-    Background="{DynamicResource {x:Static adonisUI:Brushes.Layer0BackgroundBrush}}"
-    Foreground="{DynamicResource {x:Static adonisUI:Brushes.AccentForegroundBrush}}"
-    TitleBarBackground="#285444"
-    TitleBarForeground="{DynamicResource {x:Static adonisUI:Brushes.AccentForegroundBrush}}"
-    Topmost="False"
-    mc:Ignorable="d">
-    <Window.Resources>
-        <Style
-            x:Key="ToolbarButton"
-            BasedOn="{StaticResource {x:Static adonisUI:Styles.ToolbarButton}}"
-            TargetType="Button">
-            <Setter Property="Padding" Value="4,0" />
-        </Style>
-    </Window.Resources>
-    <Grid>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <ToolBarTray>
-                <ToolBar Band="1" BandIndex="1">
-                    <Button x:Name="ValidateButton" Style="{StaticResource ToolbarButton}">
-                        <StackPanel Orientation="Horizontal">
-                            <ContentControl
-                                Width="8"
-                                Height="8"
-                                Margin="0,0,8,0"
-                                Content="{StaticResource QuickRefreshIcon}" />
-                            <TextBlock Text="Re-Validate" />
-                        </StackPanel>
-                    </Button>
-                </ToolBar>
-            </ToolBarTray>
-            <Border
-                Grid.Row="1"
-                BorderBrush="LightGray"
-                BorderThickness="1">
-                <controls:AutoGrid
-                    Columns="*"
-                    RowCount="3"
-                    Rows="auto,auto,*">
+	x:Class="ModManager.Windows.StatsValidatorWindow"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:adonisUI="clr-namespace:AdonisUI;assembly=AdonisUI"
+	xmlns:behavior="clr-namespace:ModManager.Controls.Behavior"
+	xmlns:controls="clr-namespace:ModManager.Controls"
+	xmlns:conv="clr-namespace:ModManager.Converters"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:dapp="clr-namespace:ModManager;assembly=ModManager.Core"
+	xmlns:data="clr-namespace:ModManager.Models.View;assembly=ModManager.Core"
+	xmlns:dd="urn:gong-wpf-dragdrop"
+	xmlns:local="clr-namespace:ModManager.Windows"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:reactiveui="http://reactiveui.net"
+	xmlns:views="clr-namespace:ModManager.Controls.Views"
+	xmlns:vm="clr-namespace:ModManager.ViewModels"
+	Title="Stats Validator"
+	Width="900"
+	Height="600"
+	d:DataContext="{d:DesignInstance Type=vm:StatsValidatorWindowViewModel}"
+	Background="{DynamicResource {x:Static adonisUI:Brushes.Layer0BackgroundBrush}}"
+	Foreground="{DynamicResource {x:Static adonisUI:Brushes.AccentForegroundBrush}}"
+	TitleBarBackground="#285444"
+	TitleBarForeground="{DynamicResource {x:Static adonisUI:Brushes.AccentForegroundBrush}}"
+	Topmost="False"
+	mc:Ignorable="d">
+	<Window.Resources>
+		<Style
+			x:Key="ToolbarButton"
+			BasedOn="{StaticResource {x:Static adonisUI:Styles.ToolbarButton}}"
+			TargetType="Button">
+			<Setter Property="Padding" Value="4,0" />
+		</Style>
+	</Window.Resources>
+	<Grid>
+		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="auto" />
+				<RowDefinition Height="*" />
+			</Grid.RowDefinitions>
+			<ToolBarTray>
+				<ToolBar Band="1" BandIndex="1">
+					<Button x:Name="ValidateButton" Style="{StaticResource ToolbarButton}">
+						<StackPanel Orientation="Horizontal">
+							<ContentControl
+								Width="8"
+								Height="8"
+								Margin="0,0,8,0"
+								Content="{StaticResource QuickRefreshIcon}" />
+							<TextBlock Text="Re-Validate" />
+						</StackPanel>
+					</Button>
+				</ToolBar>
+			</ToolBarTray>
+			<Border
+				Grid.Row="1"
+				BorderBrush="LightGray"
+				BorderThickness="1">
+				<controls:AutoGrid
+					Columns="*"
+					RowCount="3"
+					Rows="auto,auto,*">
 
-                    <Border HorizontalAlignment="Stretch" Background="{DynamicResource {x:Static adonisUI:Brushes.Layer3BackgroundBrush}}">
-                        <TextBlock
-                            x:Name="TitleTextBlock"
-                            FontSize="24"
-                            Text="Results"
-                            TextAlignment="Center"
-                            TextWrapping="Wrap" />
-                    </Border>
+					<Border HorizontalAlignment="Stretch" Background="{DynamicResource {x:Static adonisUI:Brushes.Layer3BackgroundBrush}}">
+						<TextBlock
+							x:Name="TitleTextBlock"
+							FontSize="24"
+							Text="Results"
+							TextAlignment="Center"
+							TextWrapping="Wrap" />
+					</Border>
 
-                    <TextBlock
-                        x:Name="ResultsTextBlock"
-                        Margin="8"
-                        FontSize="16" />
+					<TextBlock
+						x:Name="ResultsTextBlock"
+						Margin="8"
+						FontSize="16" />
 
-                    <TreeView
-                        x:Name="EntriesTreeView"
-                        Margin="8,0,8,0"
-                        ScrollViewer.VerticalScrollBarVisibility="Visible">
-                        <TreeView.Resources>
-                            <Style BasedOn="{StaticResource {x:Type TreeViewItem}}" TargetType="TreeViewItem">
-                                <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
-                                <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
-                                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                            </Style>
-                        </TreeView.Resources>
-                        <TreeView.ItemTemplate>
-                            <HierarchicalDataTemplate DataType="{x:Type data:TreeViewEntry}" ItemsSource="{Binding Children}">
-                                <reactiveui:ViewModelViewHost
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Stretch"
-                                    HorizontalContentAlignment="Stretch"
-                                    VerticalContentAlignment="Stretch"
-                                    ViewModel="{Binding ViewModel}" />
-                            </HierarchicalDataTemplate>
-                        </TreeView.ItemTemplate>
-                    </TreeView>
+					<TreeView
+						x:Name="EntriesTreeView"
+						Margin="8,0,8,0"
+						ScrollViewer.VerticalScrollBarVisibility="Visible">
+						<TreeView.Resources>
+							<Style BasedOn="{StaticResource {x:Type TreeViewItem}}" TargetType="TreeViewItem">
+								<Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+								<Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
+								<Setter Property="HorizontalContentAlignment" Value="Stretch" />
+							</Style>
+						</TreeView.Resources>
+						<TreeView.ItemTemplate>
+							<HierarchicalDataTemplate DataType="{x:Type data:TreeViewEntry}" ItemsSource="{Binding Children}">
+								<reactiveui:ViewModelViewHost
+									HorizontalAlignment="Stretch"
+									VerticalAlignment="Stretch"
+									HorizontalContentAlignment="Stretch"
+									VerticalContentAlignment="Stretch"
+									ViewModel="{Binding ViewModel}" />
+							</HierarchicalDataTemplate>
+						</TreeView.ItemTemplate>
+					</TreeView>
 
-                </controls:AutoGrid>
-            </Border>
-        </Grid>
-        <Border
-            x:Name="LockScreen"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch"
-            Background="Black"
-            Opacity="0.75"
-            Visibility="Collapsed">
-            <ContentControl>
-                <StackPanel
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Orientation="Vertical">
-                    <TextBlock
-                        Margin="8"
-                        FontSize="32"
-                        Text="Validating..." />
-                    <ContentControl
-                        Width="32"
-                        Height="32"
-                        Margin="8"
-                        Content="{Binding}"
-                        ContentTemplate="{DynamicResource {x:Static adonisUI:Templates.LoadingCircle}}"
-                        Focusable="False" />
-                    <Button
-                        x:Name="CancelButton"
-                        Margin="8"
-                        Background="{DynamicResource {x:Static adonisUI:Brushes.ErrorBrush}}"
-                        Content="Cancel" />
-                </StackPanel>
-            </ContentControl>
-        </Border>
-    </Grid>
+				</controls:AutoGrid>
+			</Border>
+		</Grid>
+		<Border
+			x:Name="LockScreen"
+			HorizontalAlignment="Stretch"
+			VerticalAlignment="Stretch"
+			Background="Black"
+			Opacity="0.75"
+			Visibility="Collapsed">
+			<ContentControl>
+				<StackPanel
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					Orientation="Vertical">
+					<TextBlock
+						Margin="8"
+						FontSize="32"
+						Text="Validating..." />
+					<ContentControl
+						Width="32"
+						Height="32"
+						Margin="8"
+						Content="{Binding}"
+						ContentTemplate="{DynamicResource {x:Static adonisUI:Templates.LoadingCircle}}"
+						Focusable="False" />
+					<Button
+						x:Name="CancelButton"
+						Margin="8"
+						Background="{DynamicResource {x:Static adonisUI:Brushes.ErrorBrush}}"
+						Content="Cancel" />
+				</StackPanel>
+			</ContentControl>
+		</Border>
+	</Grid>
 </local:StatsValidatorWindowBase>
