--- a/src/GUI/ModManager/Views/StatsValidator/StatsValidatorEntryView.axaml
+++ b/src/GUI/ModManager/Views/StatsValidator/StatsValidatorEntryView.axaml
@@ -1,5 +1,5 @@
 <UserControl
-	x:Class="ModManager.StatsValidatorEntryView"
+	x:Class="ModManager.Views.StatsValidator.StatsValidatorEntryView"
 	xmlns="https://github.com/avaloniaui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
