--- a/src/GUI/ModManager/Views/StatsValidator/StatsValidatorLineView.axaml
+++ b/src/GUI/ModManager/Views/StatsValidator/StatsValidatorLineView.axaml
@@ -1,8 +1,17 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="ModManager.StatsValidatorLineView">
-  Welcome to Avalonia!
+<UserControl
+	x:Class="ModManager.StatsValidatorLineView.Views.StatsValidator"
+	xmlns="https://github.com/avaloniaui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:ModManager.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	d:DesignHeight="450"
+	d:DesignWidth="800"
+	mc:Ignorable="d">
+	<controls:HighlightingTextBlock
+		x:Name="LineTextBlock"
+		Padding="4"
+		HighlightBackground="Transparent"
+		HighlightForeground="OrangeRed"
+		Text="Line Text" />
 </UserControl>
